--- a/index.html
+++ b/index.html
@@ -6,6 +6,16 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <header>
+<a href="https://www.youtube.com/watch?v=1QwpLziggaI">jogo completo</a> <a href="https://www.youtube.com/watch?v=yWUViIgglrU">se quiser jogar como começar bem </a> <a href="https://www.youtube.com/watch?v=231i5p9b1z8">introdução basica</a>
+
+<h1>Final fantasy 12 zoadic age</h1>
+</header>
+<img src="FFXII.JPG" alt="">
+<h2>O melhor Rpg que existe</h2>
+
+<p>Final fantasy 12 zoadic age para os mas chegados ff 12 a era do zodiaco uns dos melhores senão o melhor rpg que tem sendo um dos melhores para você começar na franquia final fantasy</p>
+<p>mas nao se engane não e por que e o melhor para começar que será facil você nessa jornada controlara o vaan um menino da pereferia e sua amiga benelope Balthier e fran dois ladroes ashe uma princesa e por fim Basch um guardado exercito que foi preso por um motivo desconhecido so jogando para saber </p>
+
 </body>
 </html>
