--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
@@ -16,7 +17,18 @@
 
 <p>Final fantasy 12 zoadic age para os mas chegados ff 12 a era do zodiaco uns dos melhores senão o melhor rpg que tem sendo um dos melhores para você começar na franquia final fantasy</p>
 <p>mas nao se engane não e por que e o melhor para começar que será facil você nessa jornada controlara o vaan um menino da pereferia e sua amiga benelope Balthier e fran dois ladroes ashe uma princesa e por fim Basch um guardado exercito que foi preso por um motivo desconhecido so jogando para saber </p>
-<img src="" alt="">
+<img src="ff12 p.jpg" alt="">
 <p>o jogo ele e um rpg mas inves de ser um jogo de turno ele e um jogo em tempo real que mesmo que no começo vc ache lento espera aparecer um chefão dificil ai você vai a dificuldade</p>
+<h3>Sistemas de Gambits</h3>
+<ol>
+
+    <li>Gambits</li>
+    <h3>Gambits e o sistema para vc conseguir usar a IA do jogo ao seu favor para contrar as pessoas que estarão no jogo pq vc so por usar 3 personagen ao mesmo tempo</h3>
+    <li>Sistema de ´´Jobs´´</li>
+    <h3>o sistema de trabalho funciona de que forma que cada personagem pode fazer cada coisa por exemplo eu tenho o vaan como ladrao e samurai ele so vai poder usar katans e adagas de ladroes existe 12 para 6 personagen e cada um pode pegar 12</h3>
+    <li>Sistema de batalha</li>
+    <h3>A batalha funciona com vc selecionando a ação e o seu personagem vai fazer quando a barra de ação carregar e isso as vezes pode ser a decisão final para vc ganhar uma batalha</h3>
+
+</ol>
 </body>
 </html>
