--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
 </head>
 <body>
     <header>
-<a href="https://www.youtube.com/watch?v=1QwpLziggaI">jogo completo</a> <a href="https://www.youtube.com/watch?v=yWUViIgglrU">se quiser jogar como começar bem </a> <a href="https://www.youtube.com/watch?v=231i5p9b1z8">introdução basica</a>
+ <a href="https://www.youtube.com/watch?v=1QwpLziggaI">jogo completo</a> <a href="https://www.youtube.com/watch?v=yWUViIgglrU">se quiser jogar como começar bem </a> <a href="https://www.youtube.com/watch?v=231i5p9b1z8">introdução basica</a>
 
 <h1>Final fantasy 12 zoadic age</h1>
 </header>
-<img src="FFXII.JPG" alt="">
+<img class="foto" src="FFXII.JPG" alt="">
 <h2>O melhor Rpg que existe</h2>
 
 <p>Final fantasy 12 zoadic age para os mas chegados ff 12 a era do zodiaco uns dos melhores senão o melhor rpg que tem sendo um dos melhores para você começar na franquia final fantasy</p>
@@ -22,7 +22,7 @@
 <h3>Sistemas de Gambits</h3>
 <ol>
 
-    <li>Gambits</li>
+    <li><strong>Gambits</strong></li>
     <h3>Gambits e o sistema para vc conseguir usar a IA do jogo ao seu favor para contrar as pessoas que estarão no jogo pq vc so por usar 3 personagen ao mesmo tempo</h3>
     <li>Sistema de ´´Jobs´´</li>
     <h3>o sistema de trabalho funciona de que forma que cada personagem pode fazer cada coisa por exemplo eu tenho o vaan como ladrao e samurai ele so vai poder usar katans e adagas de ladroes existe 12 para 6 personagen e cada um pode pegar 12</h3>
