--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 </head>
 <body>
     <header>
- <a href="https://www.youtube.com/watch?v=1QwpLziggaI" class="aa">jogo completo</a> <a href="https://www.youtube.com/watch?v=yWUViIgglrU">se quiser jogar como começar bem </a> <a href="https://www.youtube.com/watch?v=231i5p9b1z8">introdução basica</a>
+<a class="ari" href="https://www.youtube.com/watch?v=1QwpLziggaI" class="aa">jogo completo</a>
+<a class="ari" href="https://www.youtube.com/watch?v=yWUViIgglrU">se quiser jogar como começar bem </a> 
+<a class="ari" href="https://www.youtube.com/watch?v=231i5p9b1z8">introdução basica</a>
 
 <h1>Final fantasy 12 zoadic age</h1>
 </header>
