--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
 <ol>
 
     <li><strong>Gambits</strong></li>
-    <h3>Gambits e o sistema para vc conseguir usar a IA do jogo ao seu favor para contrar as pessoas que estarão no jogo pq vc so por usar 3 personagen ao mesmo tempo</h3>
+    <h3>Gambits e o sistema para vc conseguir usar a IA do jogo ao seu favor para controlar as pessoas que estarão no jogo pq vc so por usar 3 personagen ao mesmo tempo</h3>
     <li>Sistema de ´´Jobs´´</li>
-    <h3>o sistema de trabalho funciona de que forma que cada personagem pode fazer cada coisa por exemplo eu tenho o vaan como ladrao e samurai ele so vai poder usar katans e adagas de ladroes existe 12 para 6 personagen e cada um pode pegar 12</h3>
+    <h3>o sistema de trabalho funciona de que forma que cada personagem pode fazer cada coisa por exemplo eu tenho o vaan como ladrao e samurai ele so vai poder usar katans e adagas de ladroes existe 12 para 6 personagen e cada um pode pegar 2</h3>
     <li>Sistema de batalha</li>
     <h3>A batalha funciona com vc selecionando a ação e o seu personagem vai fazer quando a barra de ação carregar e isso as vezes pode ser a decisão final para vc ganhar uma batalha</h3>
 
